# kde-arch-update-plasmoid

./: .directory  .gitignore  ArchUpdater  CMakeLists.txt  README.md  howToInstallArch.txt  install_plasmoid.sh  kde-arch-update-plasmoid.kdev4
.kdev4/: kde-arch-update-plasmoid.kdev4
icons/archUpdateNotifier/: index.theme
icons/archUpdateNotifier/base/128x128/: .directory
icons/archUpdateNotifier/base/48x48/apps/: .directory
icons/archUpdateNotifier/base/8x8/: .directory
package/: metadata.desktop
package/contents/: .directory
package/contents/config/: config.qml  main.xml
package/contents/ui/: .directory  CompactRepresentation.qml  ConfigGeneral.qml  FullRepresentation.qml  FullRepresentation.qml.orig  FullRepresentation.qmlc  archLogo.qml  main.qml  main.qmlc  settings.qml
package/contents/ui/config/: .directory  ConfigGeneral.qml
plugin/: .systemCalls.h.kate-swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  passwordWorker.cpp  passwordWorker.h  plasmoidplugin.cpp  qmldir  systemCalls.cpp  systemCalls.h  worker.cpp  worker.cpp.orig  worker.h
